--- a/MyWabApp/main.css
+++ b/MyWabApp/main.css
@@ -1,6 +1,6 @@
 .font-format-courier-chocolate
 
-    {color: chocolate;
+    {color: blue ;
     font-family: 'Courier New', Courier, monospace;
     font-size: 110%;
 }
